[gd_scene load_steps=17 format=3 uid="uid://ccskobp4drq0y"]

[ext_resource type="Script" path="res://src/anubis_scene/anubis_scene_after_book.gd" id="1_xhld1"]
[ext_resource type="Texture2D" uid="uid://c5rsshcnhb6gl" path="res://assets/png/side_view_bg.png" id="2_auks0"]
[ext_resource type="PackedScene" uid="uid://c4dt13kdflfw8" path="res://src/dialogue/choices_dialogue.tscn" id="3_ka1pd"]
[ext_resource type="PackedScene" uid="uid://d0vt5npypxwb" path="res://src/dialogue/character_dialogue.tscn" id="4_f57sg"]
[ext_resource type="Texture2D" uid="uid://cuk3wpbyb2xxe" path="res://assets/png/side_view_anubis.png" id="5_r4hsk"]
[ext_resource type="Texture2D" uid="uid://bguyr7ixh5mgu" path="res://assets/png/side_view_table.png" id="6_rnb8r"]
[ext_resource type="PackedScene" uid="uid://ddwoa0wudaq52" path="res://src/anubis_scene/sv_player.tscn" id="7_7q0f6"]
[ext_resource type="Script" path="res://src/anubis_scene/earthDoor.gd" id="8_nonb8"]
[ext_resource type="Texture2D" uid="uid://clcnfjpfbsgxu" path="res://assets/png/gate-big-Sheet.png" id="9_5pje7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfvhm"]
size = Vector2(76, 184)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8fmo"]
size = Vector2(640, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8odl"]
size = Vector2(48, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bgysg"]
size = Vector2(48, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cf6ul"]
size = Vector2(64, 144)

[sub_resource type="Animation" id="Animation_gfrwj"]
resource_name = "fade_to_black"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_50i3n"]
_data = {
"fade_to_black": SubResource("Animation_gfrwj")
}

[node name="AnubisScene" type="Node2D"]
script = ExtResource("1_xhld1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_auks0")

[node name="PlayerDialogue" parent="." instance=ExtResource("3_ka1pd")]
visible = false
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 261.0
offset_right = 640.0
offset_bottom = 359.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="CharacterDialogue" parent="." instance=ExtResource("4_f57sg")]
visible = false
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 640.0
offset_bottom = 98.0
grow_horizontal = 1
size_flags_vertical = 0

[node name="SideViewAnubis" type="Sprite2D" parent="."]
position = Vector2(320, 184)
texture = ExtResource("5_r4hsk")

[node name="SideViewTable" type="Sprite2D" parent="."]
position = Vector2(320, 240)
texture = ExtResource("6_rnb8r")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="RightWall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(602, 164)
shape = SubResource("RectangleShape2D_xfvhm")

[node name="LeftWall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(36, 164)
shape = SubResource("RectangleShape2D_xfvhm")

[node name="Floor" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(320, 308)
shape = SubResource("RectangleShape2D_c8fmo")

[node name="Player2" parent="." instance=ExtResource("7_7q0f6")]
position = Vector2(319, 222)

[node name="EarthDoor" type="Area2D" parent="."]
script = ExtResource("8_nonb8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthDoor"]
position = Vector2(128, 208)
shape = SubResource("RectangleShape2D_g8odl")

[node name="Sprite2D" type="Sprite2D" parent="EarthDoor"]
position = Vector2(144, 209)
texture = ExtResource("9_5pje7")
hframes = 4

[node name="AfterlifeDoor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AfterlifeDoor"]
position = Vector2(512, 208)
shape = SubResource("RectangleShape2D_bgysg")

[node name="Sprite2D2" type="Sprite2D" parent="AfterlifeDoor"]
position = Vector2(495, 209)
texture = ExtResource("9_5pje7")
hframes = 4

[node name="Anubis" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anubis"]
position = Vector2(320, 184)
shape = SubResource("RectangleShape2D_cf6ul")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0)
offset_left = -128.0
offset_top = -99.0
offset_right = 825.0
offset_bottom = 491.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_50i3n")
}

[connection signal="SELECTED" from="PlayerDialogue" to="." method="_on_player_dialogue_selected"]
[connection signal="area_entered" from="EarthDoor" to="EarthDoor" method="_on_area_entered"]
[connection signal="area_exited" from="EarthDoor" to="EarthDoor" method="_on_area_exited"]
